# Stencil-GPU

./: .gitignore  README.md
Generator/: Makefile  generator.cpp
Stencil/CPU/: CPU.cpp  Makefile
Stencil/naive GPU/: GPU.cu  Makefile
Stencil/naive_gpu/: GPU.cu  Makefile
Stencil/warp_shared_inter/: GPU.cu  stencil
Stencil/warp_shuffle/: GPU.cu  Makefile
Stencil/warp_shuffle_overlap_tiling/: GPU.cu  Makefile  run.sh  stencil
Stencil/warp_shuffle_shared_memory/: CMakeLists.txt  GPU.cu  stencil
Stencil/warp_shuffle_time_skewed/: GPU.cu  Makefile  test_cooperative_kernel.cu
Utility/: timing.h
